[workspace]
members = ["macros"]

[package]
name = "evergreen_relations"
version = "0.1.0"
edition = "2021"

[dependencies]
evergreen_relations_macros = { path = "macros" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", rev = "ac1faf0", default-features = false }
disqualified = "1.0"
smallvec = { version = "1.13", features = ["const_generics"] }
